Next Version
------------
- fixed subitem behavior of MLShow and MLAlbum on removal
- MLTitleDecrapifier handles shows with more than 99 and less than 1000
  episodes correctly now
- added user defaults option to disable file name display optimizations
  when media is newly added to the library

Added Public APIs:
- MLShow:
  - new selectors: removeEpisode, removeEpisodeWithSeasonNumberandEpisodeNumber
- MLAlbum:
  - new selectors: removeTrack, removeTrackWithTrackNumber
- MLLabel
  - new selector: allLabels

Version 2.1.3
-------------
- fix crash when processing files whose names are less than 6 characters long
  (after removing the file extension)

Version 2.1.2
-------------
- fix crashes and missing exception handlings
- fix memory leaks in MLFile, library and title sanitizer
- prevent zombie creation and VLCMedia corruptions

Version 2.1.1
-------------
- improved title decrapification with faster processing and support for older
  TV show naming schemes
- improve notifications of some properties

Version 2.1
-----------
Features:
- added support for audio file detection and album organization
- improved title decrapification including advanced TV Show support
- overall stability improvements
- updated database format including a future-proof upgrade API

Added Public APIs:
- MLAlbum:
  - New class
- MLAlbumTrack:
  - New class
- MLFile:
  - new properties: lastAudioTrack, lastSubtitleTrack
- MLMediaLibrary:
  - new properties: delegate, libraryNeedsUpgrade
  - new selector: upgradeLibrary
  - new delegate protocol: libraryUpgradeComplete

Version 2.0
-----------
The entire library was cleaned and relicensed to LGPL 2.1 or later.
Please note that the Objective-C syntax was updated, so MediaLibraryKit may no longer compile with outdated versions of Xcode / clang.

Features:
- added automatic support for HiDPI thumbnails depending on the iOS device the
  client app is executed on

Added APIs:
- MediaLibraryKit: